Aprimoramento do front-end

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-
+    <!--=============== HOME ===============-->
     <main class="main">
         <section class="home section" id="home">
             <div class="home__container container grid">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </section>
-
+        <!--=============== ABOUT ===============-->
         <section class="about section container" id="about">
             <div class="about__container grid">
                 <div class="about__data">
@@ -50,14 +50,23 @@
                         <br>
                         - Projeto de Inovação - Atividade
                     </p>
-                    </p>
                 </div>
 
-                <img src="https://d335luupugsy2.cloudfront.net/cms/files/106713/1612752101/$21eavzpdc0w"
-                    class="svg__img about__img" alt="">
+                <div class="container_forms" id="forms">
+                    <div class="contact-box">
+                        <div class="right">
+                            <h2>Baixe o Kit!</h2>
+                            <br>
+                            <input type="text" class="field" placeholder="Nome">
+                            <input type="text" class="field" placeholder="Email">
+                            <input type="text" class="field" placeholder="Telefone">
+                            <button class="btn">Baixar</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-
+        <!--=============== VANTAGENS ===============-->
         <section class="services section container" id="services">
             <h2 class="section__title">Vantagens</h2>
             <div class="services__container grid">
@@ -87,11 +96,7 @@
                 </div>
             </div>
         </section>
-
-        <section class="contact section container" id="forms">
-            <h1>Forms aqui!!</h1>
-        </section>
-
+        <!--=============== CONTACT ===============-->
         <section class="contact section container" id="contact">
             <div class="contact__container grid">
                 <div class="contact__content">
@@ -114,7 +119,7 @@
             </div>
         </section>
     </main>
-
+    <!--=============== FOOTER ===============-->
     <footer class="footer section">
         <p class="footer__copy">Copyright &#169; 2022 MargiEducation</p>
     </footer>
